force-app/main/default/objects/INVOICING_VAT__c/INVOICING_VAT__c.object-meta.xml
<CustomObject>
    <label>FMS BILL+VAT</label>
    <nameField>
        <displayFormat>IV-{0000000}</displayFormat>
        <label>FMS BILL+VAT</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>