force-app/main/default/objects/INVOICING_VAT__c/fields/AmountBuyingInclTAXForVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTAXForVAT__c</fullName>
    <label>AMOUNT BUYING INCL TAX(LOCAL) FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>