force-app/main/default/objects/INVOICING_VAT__c/fields/AmountBuyingInclTAXLocalFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTAXLocalFMSFormula__c</fullName>
    <description>2</description>
    <formula>INVOICING__r.BuyInTaxAmountJPY__c</formula>
    <label>AMOUNT BUYING INCL TAX(LOCAL)-FMS FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>