force-app/main/default/objects/INVOICING_VAT__c/fields/AmountOfTaxBuyingFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxBuyingFMSFormula__c</fullName>
    <formula>INVOICING__r.BuyTaxNum__c</formula>
    <label>AMOUNT OF TAX-BUYING(LOCAL)-FMS  FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>