force-app/main/default/objects/INVOICING_VAT__c/fields/AmountOfTaxSellingFCYForVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxSellingFCYForVAT__c</fullName>
    <label>Amount of Tax Selling(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>