force-app/main/default/objects/INVOICING_VAT__c/fields/AmountOfTaxSellingFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxSellingFMSFormula__c</fullName>
    <formula>INVOICING__r.SellTaxNum__c</formula>
    <label>AMOUNT OF TAX-SELLING(LOCAL)-FMS  FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>