force-app/main/default/objects/INVOICING_VAT__c/fields/AmountOfTaxSellingLocalForVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxSellingLocalForVAT__c</fullName>
    <label>AMOUNT OF TAX-SELLING(LOCAL) FOR VAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>