force-app/main/default/objects/INVOICING_VAT__c/fields/AmountSellingInclTAXFCYFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTAXFCYFMSFormula__c</fullName>
    <formula>INVOICING__r.SellInTaxAmount_USD__c</formula>
    <label>Amount Selling incl Tax-Formu(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>