force-app/main/default/objects/INVOICING_VAT__c/fields/AmountSellingInclTAXFCYForVAT__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTAXFCYForVAT__c</fullName>
    <label>Amount Selling incl Tax(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>