force-app/main/default/objects/INVOICING_VAT__c/fields/AmountSellingInclTAXLocalFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTAXLocalFMSFormula__c</fullName>
    <formula>INVOICING__r.SellInTaxAmountJPY__c</formula>
    <label>AMOUNT SELLING INCL TAX(LOCAL)-FMS  FORM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>