force-app/main/default/objects/INVOICING_VAT__c/fields/AutoConnectToTransaction__c.field-meta.xml
<CustomField>
    <fullName>AutoConnectToTransaction__c</fullName>
    <label>AUTO-CONNECT SOURCES TO TRANSACTION</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RecordCreationStatus</valueSetName>
    </valueSet>
</CustomField>