force-app/main/default/objects/INVOICING_VAT__c/fields/BankID__c.field-meta.xml
<CustomField>
    <fullName>BankID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ID</label>
    <referenceTo>BankTransaction__c</referenceTo>
    <relationshipLabel>FMS BILL+VAT</relationshipLabel>
    <relationshipName>FMSBillVATBank</relationshipName>
    <type>Lookup</type>
</CustomField>