force-app/main/default/objects/INVOICING_VAT__c/fields/CashID__c.field-meta.xml
<CustomField>
    <fullName>CashID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CASH ID</label>
    <referenceTo>CASH_BOOK__c</referenceTo>
    <relationshipLabel>FMS BILL+VAT</relationshipLabel>
    <relationshipName>FMSBillVATCash</relationshipName>
    <type>Lookup</type>
</CustomField>