force-app/main/default/objects/INVOICING_VAT__c/fields/InboundVATNoischanged__c.field-meta.xml
<CustomField>
    <fullName>InboundVATNoischanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inbound VAT No is changed</label>
    <type>Checkbox</type>
</CustomField>