force-app/main/default/objects/INVOICING_VAT__c/fields/INVOICING__c.field-meta.xml
<CustomField>
    <fullName>INVOICING__c</fullName>
    <inlineHelpText>Filter Type:Optional.
-Pricing:Active equals True</inlineHelpText>
    <label>INVOICING</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>AnkenMeisai__c.Tariff__r.ProductFlag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Filter Type:Optional.
-PRICING:ACTIVE equals True</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AnkenMeisai__c</referenceTo>
    <relationshipName>INVOICING_VAT</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>