force-app/main/default/objects/INVOICING_VAT__c/fields/otalAmountOfSellingFCYForVAT__c.field-meta.xml
<CustomField>
    <fullName>otalAmountOfSellingFCYForVAT__c</fullName>
    <label>Total Amount of Selling(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>