force-app/main/default/objects/INVOICING_VAT__c/fields/OutboundVATInvNo__c.field-meta.xml
<CustomField>
    <fullName>OutboundVATInvNo__c</fullName>
    <label>OUTBOUND VAT INV NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>