force-app/main/default/objects/INVOICING_VAT__c/fields/OutboundVATNoischanged__c.field-meta.xml
<CustomField>
    <fullName>OutboundVATNoischanged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Outbound VAT No is changed</label>
    <type>Checkbox</type>
</CustomField>