force-app/main/default/objects/INVOICING_VAT__c/fields/TotalAmountOfBuyingLocalFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyingLocalFMSFormula__c</fullName>
    <formula>INVOICING__r.BuyAmountJPN__c</formula>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)-FMS FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>