force-app/main/default/objects/INVOICING_VAT__c/fields/TotalAmountOfSellingFCYFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellingFCYFMSFormula__c</fullName>
    <formula>INVOICING__r.SellAmountUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling-Fomu(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>