force-app/main/default/objects/INVOICING_VAT__c/fields/TotalAmountOfSellingLocalFMSFormula__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellingLocalFMSFormula__c</fullName>
    <formula>INVOICING__r.SellAmountJPN__c</formula>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)-FMS FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>