force-app/main/default/objects/INVOICING_VAT__c/fields/TrxPlanID__c.field-meta.xml
<CustomField>
    <fullName>TrxPlanID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRX PLAN ID</label>
    <referenceTo>PaymentRequest__c</referenceTo>
    <relationshipName>FMSBillVAT</relationshipName>
    <type>Lookup</type>
</CustomField>