force-app/main/default/objects/INVOICING_VAT__c/fields/wkVATInvoiceArrivedDate__c.field-meta.xml
<CustomField>
    <fullName>wkVATInvoiceArrivedDate__c</fullName>
    <formula>VAT_INVOICE__r.VATInvoiceArrivedDate__c</formula>
    <label>wkVAT Invoice Arrived Date</label>
    <type>Date</type>
</CustomField>