force-app/main/default/objects/INVOICING_VAT__c/fields/wkVATInvoiceIssueDate__c.field-meta.xml
<CustomField>
    <fullName>wkVATInvoiceIssueDate__c</fullName>
    <formula>VAT_INVOICE__r.VATInvoicePrintDate__c</formula>
    <label>wkVAT Invoice Issued Date</label>
    <type>Date</type>
</CustomField>